--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -112,11 +112,11 @@
             </div>
 
             <div class="legend">
-                <span class="legend_c_box">Current</span>
-                <span class="legend_w_box">Watched</span>
-                <span class="legend_q_box">To Watch</span>
-                <span class="legend_h_box">On Hold</span>
-                <span class="legend_d_box">Dropped</span>
+                <span class="legend_c_box unselectable" id="c">Current</span>
+                <span class="legend_w_box unselectable" id="w">Watched</span>
+                <span class="legend_q_box unselectable" id="q">To Watch</span>
+                <span class="legend_h_box unselectable" id="h">On Hold</span>
+                <span class="legend_d_box unselectable" id="d">Dropped</span>
             </div>
 
 
