Fix "hide panel" button not rotating in Chrome and Safari

--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -55,7 +55,7 @@
     </div>
     
     <!--<a href="#" onclick="toggle_info(); return false;"><span style="width: auto; height: 20px; position: fixed; margin-top: 40px; margin-left: -1px; color: #BDBDBD; margin-bottom: -10px; margin-left: 20px; z-index: 1000;" id="butan" onMouseOver="this.style.color='#8E8E8E'" onMouseOut="this.style.color='#BDBDBD'">[hide panel]</a> -->
-    <div style="background-color: #1f1f1f; color: #999999; z-index: 9001; transform: rotate(90deg); float: left; position: fixed; left: -90px; top: 171px; width: 223px; margin-left: 0px; padding: 0px; text-align: center; cursor: pointer;" onclick="toggle_info()" id="butan">hide panel</div>
+    <div style="background-color: #1f1f1f; color: #999999; z-index: 9001; -webkit-transform: rotate(90deg);  transform: rotate(90deg); float: left; position: fixed; left: -90px; top: 171px; width: 223px; margin-left: 0px; padding: 0px; text-align: center; cursor: pointer;" onclick="toggle_info()" id="butan">hide panel</div>
 
     <div style="margin-top: 60px; margin-left: 20px; float: left; position: fixed;" id="profile_info">
       <a href="http://gravatar.com/emails/" title="Change your avatar at gravatar!"> <img src="http://gravatar.com/avatar/{{ info['db']['users'][user]['email_hash'] }}?s=210" style="padding: 5px; border: 1px solid #AABAC5; margin-bottom: 10px;" /> </a><br />
