--- a/static/home.css
+++ b/static/home.css
@@ -1,6 +1,17 @@
-  body {
+body {
     padding-top: 10px;
     padding-bottom: 40px;
     text-decoration: none;
-  }
+}
 
+.avatars {
+	float: left;
+	margin-top: 30px;
+	width: 300px;
+}
+
+img.avatars {
+	padding: 5px;
+	border: 1px solid #AABAC5;
+	margin-bottom: 5px;
+}
