--- a/static/profile.css
+++ b/static/profile.css
@@ -152,6 +152,7 @@ li.active_d > a, li.active_d > a:hover, li.active_d > a:focus {
   display: block;
   position: absolute;
   z-index: 100;
+  margin-bottom: 15px;
 }
 
 .spinner-icon {
