Port MAL to ANN; placeholder on character list

--- a/templates/entry_details.html
+++ b/templates/entry_details.html
@@ -61,9 +61,7 @@
     </div>
     <div id="collapseTwo" class="accordion-body collapse">
       <div class="accordion-inner">
-        {% for char in characters[0] %}
-        	<a href="#" onclick="showBiography('{{ char }}', '{{ characters[1][loop.index - 1] }}'); return false"><img src="{{ characters[2][loop.index - 1] }}" alt="[{{ char }}]" title="[{{ char }}]" /></a>
-        {% endfor %}
+        ur a cake
 
         <br />
         <div id="biography"></div>
