--- a/templates/entry_details.html
+++ b/templates/entry_details.html
@@ -8,52 +8,56 @@
     <div id="collapseOne" class="accordion-body collapse in">
       <div class="accordion-inner">
 		{% if entry['type'] == 'anime' %}
-			<img src="{{ deep['image_url'] }}" style="float: right; padding-right: 10px; max-width: 250px;" />
+			<a href="/proxyImage?url={{ deep['image_url'] }}" target="_BLANK"><img src="/proxyImage?url={{ deep['image_url'] }}" style="float: right; padding-right: 10px; max-width: 250px;" alt="[artwork for {{ entry['name'] }}]" title="Click to view on full size" /></a>
 			<h1>{{ entry['name'] }} <small>{{ deep['type'] }}</small></h1>
 			<b>Status: </b>{{ trstatus }}<br />
 			<b>Last episode watched: </b>{{ entry['lastwatched'] }} of {{ deep['episodes'] }}<br />
+			<b>Genre: </b>{% autoescape false %}{{ ' <span class="muted">/</span> '.join(deep['genres']) }}{% endautoescape %}<br />
 			<br />
-			<b>Genre: </b>{{ entry['genre'] }}<br />
 			{% if deep['end_date'] != None %}
 				<!--<b>Aired: </b>{{ deep['start_date'] }} - {{ deep['end_date'] }}<br />-->
 			{% else %}
 				<!--<b>Aired: </b>{{ deep['start_date'] }} - ongoing<br />-->
 			{% endif %}
 			<b>Synopsis: </b>{% autoescape false %}		{{ deep['synopsis'] }}{% endautoescape %}<br />
-			{% if deep['credit']|length > 0 %}<b>Created by: </b>{{ ' / '.join(deep['credit']) }}<br />{% endif %}
-			<br />{% if entry['obs'] != '' %}<b>Observations: </b>{{ entry['obs'] }}{% else %}<b>No observations</b>{% endif %}
+			{% if deep['credit']|length > 0 %}<b>Created by: </b>{% autoescape false %}{{ ' <span class="muted">/</span> '.join(deep['credit']) }}{% endautoescape %}<br />{% endif %}
+			{% if entry['obs'] != '' %}<br /><b>Observations: </b>{{ entry['obs'] }}{% endif %}
 			<br />
 	  		<hr />
 
-	        <a href="#" onclick="expand('#soundtrack_t', '#soundtrack_e', 'Soundtrack'); return false" class="nolink"> <span id="soundtrack_t" style="font-size: 18px;">+ Soundtrack</span></a><br />
-	        <div id="soundtrack_e" style="display: none;">
+	        <span id="soundtrack_t" style="font-size: 18px;">Soundtrack</span><br />
 	        {% for op in deep['OPsongs'] %}
 	        	<span style="padding-left: 10px; font-size: 12px"><small class="muted">(OP) </small>{{ op }}</span><br />
 	        {% endfor %}
 	        {% for ed in deep['EDsongs'] %}
 	        	<span style="padding-left: 10px; font-size: 12px"><small class="muted">(ED) </small>{{ ed }}</span><br />
 	        {% endfor %}
-	        </div>
 
 	        <hr />
 
 	        <div style="float: left;">
-	        	<a href="#" onclick="expand('#chars_t', '#chars_e', 'Characters'); return false" class="nolink"> <span id="chars_t" style="font-size: 18px;">+ Characters</span></a><br />
-	        	<div id="chars_e" style="display: none;">
+	        	<span style="font-size: 18px;">Characters</span><br />
 	        	{% for char in deep['characters'] %}
 		        	<span style="padding-left: 10px; font-size: 12px">{{ char }} <span class="muted">(voiced by {{ deep['characters'][char] }})</span></span><br />
+	        	{% endfor %}
+	        </div>
+
+	        <div style="float: left; width: 300px">
+	        	<span style="font-size: 18px;  padding-left: 10px;">Episodes</span><br />
+	        	{% for ep in deep['episode_keys'] %}
+		        	<span style="font-size: 12px; padding-left: 15px;"><span class="muted">#{{ ep }}</span> {{ deep['episode_names'][ep] }} </span><br />
+	        	{% endfor %}
+	        </div>
+
+	        <div style="float: left; padding-left: 10px;">
+	        	<a href="#" onclick="expand('#staff_t', '#staff_e', 'Staff'); return false" class="nolink"> <span id="staff_t" style="font-size: 18px;">+ Staff</span></a><br />
+	        	<div id="staff_e" style="display: none;">
+	        	{% for staff in deep['staff'] %}
+		        	<span style="padding-left: 10px; font-size: 12px">{{ staff }} <span class="muted">({{ deep['staff'][staff] }})</span></span><br />
 	        	{% endfor %}
 	        	</div>
 	        </div>
 
-	        <div style="float: left;">
-	        	<a href="#" onclick="expand('#eps_t', '#eps_e', 'Episodes'); return false"> <span id="eps_t" style="font-size: 18px;  padding-left: 10px;" class="nolink">+ Episodes</span></a><br />
-	        	<div id="eps_e" style="display: none; padding-left: 20px;">
-	        	{% for ep in deep['episode_keys'] %}
-		        	<span style="font-size: 12px"><span class="muted">#{{ ep }}</span> {{ deep['episode_names'][ep] }} </span><br />
-	        	{% endfor %}
-	        	</div>
-	        </div>
 	        <br /><br />
 		{% elif entry['type'] == 'manga' %}
 			<img src="{{ deep['image_url'] }}" style="float: right; padding-right: 10px;" />
@@ -83,20 +87,19 @@
       </div>
     </div>
   </div>
-  {% if (entry['type'] == 'anime')%}
-  <!--<div class="accordion-group">
-	<div class="accordion-heading">
+  <div class="accordion-group">
+ 	<div class="accordion-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-        Soundtrack
+        Comments
       </a>
     </div>
     <div id="collapseTwo" class="accordion-body collapse">
       <div class="accordion-inner">
-
+        Coming Soon
       </div>
     </div>
   </div>
-  <div class="accordion-group">
+  <!--<div class="accordion-group">
     <div class="accordion-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
         Subbing groups
@@ -107,5 +110,5 @@
         lel faget
       </div>
     </div>
-  </div>--> {% endif %}
+  </div>-->
 </div>
